2003-08-11  Peter Stephenson  <pws@csr.com>

	* 18938: Src/lex.c, Src/Math.c, Src/Zle/zle_main.c,
	Src/Zle/compcore.c: Mark some data symbols for export, shutting
	up Cygwin's dllwrap.  Note that c from zle_main.c is not marked
	for export because no-one would ever export a symbol called c.

2003-08-05  Oliver Kiddle  <opk@zsh.org>

	* Completion/Unix/Command/_archie: archie servers no longer exist
	so remove redundant completion

	* 18928: Completion/Unix/Command/_cdrecord: new cdrecord completion

	* 18927: Completion/Unix/Command/_cvs: fix recent mistake with quoting

2003-08-05  Peter Stephenson  <pws@csr.com>

	* 18926: Src/Zle/complist.c: fix (without knowing how) insertion
	of file names requiring metafication into the command line on
	a successful menu selection.

2003-08-01  Peter Stephenson  <pws@csr.com>

	* 18920: Src/utils.c, Completion/Core/Base/_main_complete: update
	18916 to use space to join if unset, as per POSIX; set IFS locally
	in completion just in case.

2003-08-01  Oliver Kiddle  <opk@zsh.org>

	* 18922: Src/glob.c: fix minor bug with f glob qualifier

	* 18921: Completion/Unix/Command/_chmod: new chmod completion

2003-08-01  Peter Stephenson  <pws@csr.com>

	* 18916: Src/utils.c: Unsetting IFS could cause segmentation
	fault (any time IFS was used to join an array).

2003-07-31  Oliver Kiddle  <opk@zsh.org>

	* 18914: Completion/Base/Utility/_nothing,
	Completion/Cygwin/Command/_cygpath,
	Completion/Cygwin/Command/_cygrunsrv,
	Completion/Cygwin/Command/_getclip,
	Completion/Cygwin/Command/_getfacl,
	Completion/Cygwin/Command/_mkshortcut,
	Completion/Cygwin/Command/_pscp, Completion/Cygwin/Command/_putclip,
	Completion/Debian/Command/_auto-apt, Completion/Debian/Command/_bug,
	Completion/Debian/Command/_debchange,
	Completion/Debian/Command/_debfoster,
	Completion/Debian/Command/_debsign, Completion/Debian/Command/_dpkg,
	Completion/Debian/Command/_dpkg_source,
	Completion/Debian/Command/_dput, Completion/Debian/Command/_dupload,